@@ -14,7 +14,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # This file is part of the GDB testsuite.  It tests python pretty
-# printers.
+# printer registration.
 
 import re
 import gdb.types
@@ -37,42 +37,44 @@ def lookup_function_lookup_test(val):
     return None
 
 
-class pp_s (object):
+class pp_s1 (object):
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
         a = self.val["a"]
         b = self.val["b"]
-        if a.address != b:
-            raise Exception("&a(%s) != b(%s)" % (str(a.address), str(b)))
-        return "a=<" + str(self.val["a"]) + "> b=<" + str(self.val["b"]) + ">"
+        return "s1 a=<" + str(self.val["a"]) + "> b=<" + str(self.val["b"]) + ">"
 
 
-class pp_ss (object):
+class pp_s2 (object):
     def __init__(self, val):
         self.val = val
 
     def to_string(self):
-        return "a=<" + str(self.val["a"]) + "> b=<" + str(self.val["b"]) + ">"
+        a = self.val["a"]
+        b = self.val["b"]
+        return "s2 a=<" + str(self.val["a"]) + "> b=<" + str(self.val["b"]) + ">"
 
 
-def build_pretty_printer():
+def build_pretty_printer1():
     pp = gdb.printing.RegexpCollectionPrettyPrinter("pp-test")
 
-    pp.add_printer('struct s', '^struct s$', pp_s)
-    pp.add_printer('s', '^s$', pp_s)
-
-    # Use a lambda this time to exercise doing things this way.
-    pp.add_printer('struct ss', '^struct ss$', lambda val: pp_ss(val))
-    pp.add_printer('ss', '^ss$', lambda val: pp_ss(val))
-
-    pp.add_printer('enum flag_enum', '^flag_enum$',
-                   gdb.printing.FlagEnumerationPrinter('enum flag_enum'))
+    pp.add_printer('struct s', '^struct s$', pp_s1)
+    pp.add_printer('s', '^s$', pp_s1)
 
     return pp
 
 
-gdb.printing.register_pretty_printer(gdb, lookup_function_lookup_test)
-my_pretty_printer = build_pretty_printer()
-gdb.printing.register_pretty_printer(gdb, my_pretty_printer)
+def build_pretty_printer2():
+    # This intentionally has the same name as build_pretty_printer1.
+    # It is used to test the "replace" functionality of
+    # register_pretty_printer.
+    pp = gdb.printing.RegexpCollectionPrettyPrinter("pp-test")
+
+    pp.add_printer('struct s', '^struct s$', pp_s2)
+    pp.add_printer('s', '^s$', pp_s2)
+
+    return pp
+
+# Note: Registering the printers is done in the .exp file.
